plugins {
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.5'
    id 'net.nemerosa.versioning' version '2.8.2'
    id 'com.github.johnrengelman.shadow' version '5.0.0'
}

group 'de.dfki'
version '4.0.1-SNAPSHOT'

sourceCompatibility = 11

repositories {
    mavenCentral()
    maven { url "http://repo.spring.io/libs-release" }
}

javafx {
    modules = [ 'javafx.controls', 'javafx.graphics', 'javafx.fxml', 'javafx.swing' ]
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.0'
    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.2'

    compile fileTree(dir: 'lib', include: "*.jar")
    // https://mvnrepository.com/artifact/jpl/jpl
    compile group: 'jpl', name: 'jpl', version: '7.4.0'
    // https://mvnrepository.com/artifact/de.sciss/sphinx4
    compile group: 'de.dfki.mary', name: 'marytts-client', version: '5.1.2'
    // https://mvnrepository.com/artifact/net.java.dev.jna/jna
    compile group: 'net.java.dev.jna', name: 'jna', version: '4.2.2'
    // https://mvnrepository.com/artifact/net.java.dev.jna/jna-platform
    compile group: 'net.java.dev.jna', name: 'jna-platform', version: '4.2.2'
    // https://mvnrepository.com/artifact/com.1stleg/jnativehook
    compile group: 'com.1stleg', name: 'jnativehook', version: '2.0.3'
    // https://mvnrepository.com/artifact/com.fifesoft/autocomplete
    compile group: 'com.fifesoft', name: 'autocomplete', version: '2.0.5.1'
    // https://mvnrepository.com/artifact/math.geom2d/javaGeom
    compile group: 'math.geom2d', name: 'javaGeom', version: '0.11.1'
    // https://mvnrepository.com/artifact/net.sourceforge.javaflacencoder/java-flac-encoder
    compile group: 'net.sourceforge.javaflacencoder', name: 'java-flac-encoder', version: '0.3.7'
    // https://mvnrepository.com/artifact/org.json/json
    compile group: 'org.json', name: 'json', version: '20171018'
    // https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'
    // https://mvnrepository.com/artifact/com.github.sarxos/webcam-capture
    compile group: 'com.github.sarxos', name: 'webcam-capture', version: '0.3.12'
    // https://mvnrepository.com/artifact/com.google.zxing/core
    compile group: 'com.google.zxing', name: 'core', version: '2.0'
    // https://mvnrepository.com/artifact/com.google.zxing/javase
    compile group: 'com.google.zxing', name: 'javase', version: '2.0'
    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
    // https://mvnrepository.com/artifact/com.nativelibs4java/bridj
    compile group: 'com.nativelibs4java', name: 'bridj', version: '0.7.0'
}

jar {
    from {
        (configurations.runtime).collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
    manifest {
        attributes(
                'Main-Class': 'de.dfki.vsm.SceneMaker3',
                'build' : versioning.info.build,
                'Build-Revision': versioning.info.commit
        )
    }
}